pushing design changes to repo...

--- a/index.html
+++ b/index.html
@@ -148,7 +148,17 @@
 
                     <div class="row">
                         <div class="col-lg-12">
-                            <span class="badge badge-dark mb-2 trebuchet">2012-Present</span>
+                            <span class="badge badge-dark mb-2 trebuchet">Nov 2017 - Present</span>
+                            <h3 class="trebuchet">Full Stack Developer | Triad Behavioral Health</h3>
+                            <p class="calibri">Since earning my first computer science certificate in June 2013 at Spokane Community College I have worked on several projects part time while continuing to pursue my education which has also helped me to gain experience in languages or technology that I did not learn while attending school. Some of the projects I have completed are available to view in the Portfolio section of this webpage!</p>
+
+                            <hr/>
+                        </div>
+
+
+
+                        <div class="col-lg-12">
+                            <span class="badge badge-dark mb-2 trebuchet">2012 - Present</span>
                             <h3 class="trebuchet">Freelance Web Developer</h3>
                             <p class="calibri">Since earning my first computer science certificate in June 2013 at Spokane Community College I have worked on several projects part time while continuing to pursue my education which has also helped me to gain experience in languages or technology that I did not learn while attending school. Some of the projects I have completed are available to view in the Portfolio section of this webpage!</p>
 
