--- a/index.html
+++ b/index.html
@@ -151,7 +151,6 @@
                             <span class="badge badge-dark mb-2 trebuchet">Nov 2017 - Present</span>
                             <h3 class="trebuchet">Full Stack Developer | Triad Behavioral Health</h3>
                             <p class="calibri">Since earning my first computer science certificate in June 2013 at Spokane Community College I have worked on several projects part time while continuing to pursue my education which has also helped me to gain experience in languages or technology that I did not learn while attending school. Some of the projects I have completed are available to view in the Portfolio section of this webpage!</p>
-
                             <hr/>
                         </div>
 
@@ -160,8 +159,15 @@
                         <div class="col-lg-12">
                             <span class="badge badge-dark mb-2 trebuchet">2012 - Present</span>
                             <h3 class="trebuchet">Freelance Web Developer</h3>
-                            <p class="calibri">Since earning my first computer science certificate in June 2013 at Spokane Community College I have worked on several projects part time while continuing to pursue my education which has also helped me to gain experience in languages or technology that I did not learn while attending school. Some of the projects I have completed are available to view in the Portfolio section of this webpage!</p>
+                            <p class="calibri">Since earning my first computer science related certificate in June 2013 at Spokane Community College I have worked on several projects part time while continuing to pursue my education which has also helped me to gain experience in languages or technology that I did not learn while attending school. Some of the projects I have completed are available to view in the Portfolio section of this webpage!</p>
+                            <hr/>
+                        </div>
 
+                        <div class="col-lg-12">
+                            <span class="badge badge-dark mb-2 trebuchet">Jan 2010 - Feb 2012</span>
+                            <h3 class="trebuchet">IT Help Desk | Team Spirit America</h3>
+                            <p class="calibri">Helped staff in troubleshooting and resolving technical computing issues, repaired malfunctioning or otherwise inoperable computers and hardware when necessary, served as customer support and technical liaison to CEO, staff members and vendors. Monitored internet based lead providing partner companies that TSA did business with utilizing proprietary software.</p>
+                            <hr/>
                         </div>
 
                     </div>
