--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="row">
 
                 <div class="col-lg-8 col-12">
-                    <h2 class="text-center trebuchet lg-headers">Experience</h2>
+                    <h2 class="trebuchet lg-headers"><i class="fas fa-laptop-code"></i> Experience</h2>
                     <br/>
 
                     <div class="row">
@@ -159,7 +159,7 @@
                         <div class="col-lg-12">
                             <span class="badge badge-dark mb-2 trebuchet">2012 - Present</span>
                             <h3 class="trebuchet">Freelance Web Developer</h3>
-                            <p class="calibri">Since earning my first computer science related certificate in June 2013 at Spokane Community College I have worked on several projects part time while continuing to pursue my education which has also helped me to gain experience in languages or technology that I did not learn while attending school. Some of the projects I have completed are available to view in the Portfolio section of this webpage!</p>
+                            <p class="calibri">Since earning my first software/web development related certificate in June 2013 at Spokane Community College I have worked on several projects part time while continuing to pursue my education which has also helped me to gain experience in languages or technology that I did not learn while attending school. Some of the projects I have completed are available to view in the Portfolio section of this webpage!</p>
                             <hr/>
                         </div>
 
@@ -169,6 +169,20 @@
                             <p class="calibri">Helped staff in troubleshooting and resolving technical computing issues, repaired malfunctioning or otherwise inoperable computers and hardware when necessary, served as customer support and technical liaison to CEO, staff members and vendors. Monitored internet based lead providing partner companies that TSA did business with utilizing proprietary software.</p>
                             <hr/>
                         </div>
+
+                    </div>
+
+                    <h2 class="trebuchet lg-headers"> <i class="fas fa-graduation-cap"></i> Education</h2>
+                    <br/>
+
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <span class="badge badge-dark mb-2 trebuchet">Aug 2015 - Aug 2017</span>
+                            <h3 class="trebuchet"><img class="img-fluid" src="wsu-icon-transparent.png" alt="Washington State University:  Go Cougs!"> Washington State University</h3>
+                            <p class="calibri">I attended Washington State University starting August 2015 and completed earning my BBA in Management Information Systems magna cum laude August 2017.</p>
+                            <hr/>
+                        </div>
+
 
                     </div>
 
