pushing design changes to repo...

--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
             background: #000000;
             border-bottom: 1px solid #ffffff;
             border-left: 1px solid #ffffff;
+            border-right: 1px solid #ffffff;
+            border-top: 1px solid #ffffff;
+
+
+
         }
 
         .back, .stars {
@@ -329,7 +334,101 @@
 
 
                 <div class="col-lg-4 col-12">
-                    <h2 class="trebuchet lg-headers text-center">Skills <i class="fas fa-list-alt"></i></h2>
+                    <h2 class="trebuchet lg-headers text-center">Skills <i class="fas fa-code"></i></h2>
+
+                    <h5 class="trebuchet text-muted">Coding</h5>
+                    <table class="table calibri">
+
+                        <tbody>
+                        <tr>
+                            <td>HTML5/CSS</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:90%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>Javascript/jQuery</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:85%;"></div></div></td>
+                        </tr>
+
+
+                        <tr>
+                            <td>Responsive Design</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:90%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>C#</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:75%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>Visual Basic</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:75%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>ASP.NET MVC</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:75%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>PHP</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:85%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>Laravel</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
+                        </tr>
+
+
+                        <tr>
+                            <td>Ruby</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:80%;"></div></div></td>
+                        </tr>
+
+
+                        <tr>
+                            <td>Ruby on Rails</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:85%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>SQL</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:85%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>Java</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:70%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>Aptitude to Learn Unlisted Skill</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:98%;"></div></div></td>
+                        </tr>
+
+                        </tbody>
+                    </table>
+
+                    <h5 class="trebuchet text-muted">Methodologies/DevOps</h5>
+                    <table class="table calibri">
+
+                        <tbody>
+
+                        <tr>
+                            <td>Agile Development</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>Docker</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:80%;"></div></div></td>
+                        </tr>
+
+
+                        </tbody>
+                    </table>
 
 
                     <h5 class="trebuchet text-muted">Software</h5>
@@ -391,6 +490,93 @@
 
                         </tbody>
                     </table>
+
+                    <h5 class="trebuchet text-muted">Operating Systems</h5>
+                    <table class="table calibri">
+
+                        <tbody>
+
+                        <tr>
+                            <td>Windows</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>Mac</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>Android</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:90%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>iOS</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
+                        </tr>
+
+
+                        </tbody>
+                    </table>
+
+
+                    <h5 class="trebuchet text-muted">Business</h5>
+                    <table class="table calibri">
+
+                        <tbody>
+
+                        <tr>
+                            <td>Responsible</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:100%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>Collaboration</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:100%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>Ability to Meet Deadlines</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:100%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>Learning New Skills</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
+                        </tr>
+                        <tr>
+                            <td>Organization</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:98%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>Typing (90+ WPM)</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>Customer Service</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
+                        </tr>
+
+                        <tr>
+                            <td>Attention to Detail</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
+                        </tr>
+                        <tr>
+                            <td>Phone Etiquette</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
+                        </tr>
+                        <tr>
+                            <td>Management Experience</td>
+                            <td><div class="rating"><div class="stars"></div><div class="back" style="width:75%;"></div></div></td>
+                        </tr>
+
+                        </tbody>
+                    </table>
+
+
 
                 </div>
 
