--- a/test.html
+++ b/test.html
@@ -181,7 +181,7 @@
             <br/>
 
             <div class="container">
-                <h1 class="trebuchet lg-headers text-center">Resume <a class="btn btn-sm btn-dark" href="#"><i class="fas fa-download"></i> PDF</a></h1>
+                <h1 class="trebuchet lg-headers text-center">Resume <a class="btn btn-sm btn-dark" href="CSnyder-Resume-March-21st-2019.pdf"><i class="fas fa-download"></i> PDF</a></h1>
 
             <div class="row">
 
@@ -189,38 +189,26 @@
                     <h2 class="trebuchet lg-headers"><i class="fas fa-laptop-code"></i> Experience</h2>
                     <br/>
 
-                    <!--<div class="row">-->
-                        <!--<div class="col-lg-12">-->
+
                             <span class="badge badge-dark mb-2 trebuchet">Nov 2017 - Present</span>
                             <h3 class="trebuchet">Full Stack Developer | Triad Behavioral Health</h3>
                             <p class="calibri">During my tenure with the company I have completed a multitude of projects using HTML5, CSS, Bootstrap 3/4, JavaScript, jQuery, Laravel, VBScript, C#, Git, AWS, Docker, and SQL.  I have maintained an exceptional level of customer service while collaborating with team members on project requirements, involving both front-end & back-end development and have successfully met deadlines.  The projects I have completed on my own or as a collaborative effort have had a noticeably positive effect on revenue.</p>
                             <hr/>
-                        <!--</div>-->
 
-
-
-                        <!--<div class="col-lg-12">-->
                             <span class="badge badge-dark mb-2 trebuchet">2012 - Present</span>
                             <h3 class="trebuchet">Freelance Web Developer</h3>
                             <p class="calibri">Since earning my first software/web development related certificate in June 2013 at Spokane Community College I have worked on several projects part time while continuing to pursue my education which has also helped me to gain experience in languages or technology that I did not learn while attending school. Some of the projects I have completed are available to view in the Portfolio section of this webpage!</p>
                             <hr/>
-                        <!--</div>-->
 
-                        <!--<div class="col-lg-12">-->
                             <span class="badge badge-dark mb-2 trebuchet">Jan 2010 - Feb 2012</span>
                             <h3 class="trebuchet">IT Help Desk | Team Spirit America</h3>
                             <p class="calibri">Helped staff in troubleshooting and resolving technical computing issues, repaired malfunctioning or otherwise inoperable computers and hardware when necessary, served as customer support and technical liaison to CEO, staff members and vendors. Monitored internet based lead providing partner companies that TSA did business with utilizing proprietary software.</p>
                             <hr/>
-                        <!--</div>-->
 
-                    <!--</div>-->
 
                     <h2 class="trebuchet lg-headers"> <i class="fas fa-graduation-cap"></i> Education</h2>
                     <br/>
 
-                    <!--<div class="row">-->
-
-                        <!--<div class="col-lg-12">-->
                             <span class="badge badge-dark mb-2 trebuchet">Aug 2015 - Aug 2017</span>
                             <br/>
                             <h3 class="trebuchet"><img class="img-fluid" src="wsu-icon-transparent.png" alt="Washington State University:  Go Cougs!"> Washington State University</h3>
@@ -245,9 +233,7 @@
                             </table>
                             <br/>
                             <hr/>
-                        <!--</div>-->
 
-                        <!--<div class="col-lg-12">-->
                             <span class="badge badge-dark mb-2 trebuchet">Jul 2012 - Jun 2015</span>
                             <br/>
                             <h3 class="trebuchet"><img class="img-fluid" src="scc-logo.png" alt="Spokane Community College:  Go Squatch!"> Spokane Community College</h3>
@@ -333,7 +319,6 @@
                                 </tbody>
                             </table>
                             <hr/>
-                        <!--</div>-->
                     </div>
 
             <div class="col-lg-4 col-12">
@@ -589,64 +574,29 @@
             </div>
 
 
-
-
                 </div>
-
-
 
 
             </div>
 
 
 
-
-
-
-
-            <!--</div>-->
-
-            <!--<div class="row">-->
-
-            <!--<div class="col-lg-8 col-12">-->
-            <!--<br/>-->
-
-            <!--<h2 class="trebuchet lg-headers"> <i class="fas fa-guitar"></i> Hobbies &amp; Interests <i class="fas fa-bicycle"></i></h2>-->
-            <!--<p class="calibri">For fun I like to hike, bike, listen to music, collect vinyl records, play guitar, sing and write songs. I also enjoy doing home improvement projects around my house, working in my yard and vegetable gardening. I also enjoy spending time with family & friends. When I am not busy working or doing the other hobbies mentioned I spend a great deal of time further developing my technical skills by learning as much as I can about software, coding and web development. I am constantly learning about new technologies and am committed to absorbing as much as I can. In particular, I do what I can to keep up with MVC frameworks. I have a goal to learn as many frameworks as possible since I greatly enjoy and appreciate that type of web application development environment.</p>-->
-
-            <!--</div>-->
-
-            <!--</div>-->
-
-
-
-
         </div>
 
         <div class="tab-pane fade" id="portfolio" role="tabpanel" aria-labelledby="portfolio-tab">
-            Portfolio
+            <br/>
+            <h1 class="text-center trebuchet lg-headers">Portfolio</h1>
         </div>
 
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-            Contact
+            <br/>
+            <h1 class="text-center trebuchet lg-headers">Contact</h1>
+
         </div>
 
     </div>
 </div>
 
-
-
-
-<!--<div class="container">-->
-
-
-
-
-
-
-
-
-<!--</div>-->
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
