pushing design changes to repo...

--- a/test.html
+++ b/test.html
@@ -552,12 +552,10 @@
                     </tbody>
                 </table>
 
-
                 <h5 class="trebuchet text-muted">Business</h5>
                 <table class="table calibri">
 
                     <tbody>
-
                     <tr>
                         <td>Responsible</td>
                         <td><div class="rating"><div class="stars"></div><div class="back" style="width:100%;"></div></div></td>
@@ -614,7 +612,6 @@
 
             </div>
 
-
         </div>
 
         <div class="tab-pane fade" id="portfolio" role="tabpanel" aria-labelledby="portfolio-tab">
@@ -623,7 +620,7 @@
             <p class="main-text calibri">This section of my site is dedicated to some work I have completed and felt appropriate to showcase.  If you click on an image on this page, you will be opening up a navigable gallery for a particular project which includes a technical description of each image.  If you click on an accompanying 'More Info' button then you will be able to read more about a particular project.</p>
 
            <!--beginning of portfolio galleries-->
-            <div class="row">
+            <div class="row mx-auto">
                 <div class="col-sm-12 mt-5 col-md-6">
 
                     <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
